--- a/index.html
+++ b/index.html
@@ -41,8 +41,91 @@
         <img src="/img/bag-01.png" alt="">
       </a>
     </div>
-      <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Shop</button> -->
     </nav>
+    <!-- PAGE 1 HOME -->
+    <div class="page1">
+        <a id="home" class="smooth"></a>
+        <!-- <div class="logos"> -->
+    <div class="logo">
+        <img src="/img/Algonquin_College_logo.png" alt="">
+      </div>
+      <div class="media">
+        <img src="/img/SOMD_RGB-GREEN-Unlocked-LeftAligned.png" alt="">
+      </div>
+     </div> 
+     <!-- main -->
+     <h2>Student Design Portal</h2>
+
+    <div
+      id="carouselExampleControls"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+          
+            src="/img/resumeTemplate.png"
+            class="d-block w-100"
+            alt="First slide"
+          />
+
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/digitalArt.png"
+            alt="Second slide"
+          />
+        </div>
+
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/websiteTheme.png"
+            alt="Third slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/logo.png"
+            alt="Fourth slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="/img/businessCards.png"
+            alt="Fifth slide"
+          />
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <div class="about">
+      <p>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus provident eos nemo necessitatibus, molestiae quasi quaerat voluptatum! Sunt porro odio fugiat, atque totam reiciendis esse vel mollitia eveniet consequatur at!</p>
+   
+    </div>
+  </div>
+
   </body>
   <!-- bootstrap -->
   <script src="https://code.jquery.com/jquery-4.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
