--- a/index.html
+++ b/index.html
@@ -16,14 +16,24 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
-    
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">Services</a>
@@ -38,99 +48,129 @@
       </div>
       <div class="bag">
         <a href="#">
-        <img src="/img/bag-01.png" alt="">
-      </a>
-    </div>
+          <img src="/img/bag-01.png" alt="" />
+        </a>
+      </div>
     </nav>
     <!-- PAGE 1 HOME -->
     <div class="page1">
-        <a id="home" class="smooth"></a>
-        <!-- <div class="logos"> -->
-    <div class="logo">
-        <img src="/img/Algonquin_College_logo.png" alt="">
+      <a id="home" class="smooth"></a>
+      <!-- <div class="logos"> -->
+      <div class="logo">
+        <img src="/img/Algonquin_College_logo.png" alt="" />
       </div>
       <div class="media">
-        <img src="/img/SOMD_RGB-GREEN-Unlocked-LeftAligned.png" alt="">
+        <img src="/img/SOMD_RGB-GREEN-Unlocked-LeftAligned.png" alt="" />
       </div>
-     </div> 
-     <!-- main -->
-     <h2>Student Design Portal</h2>
+    </div>
+    <!-- main -->
+    <!-- Home Section -->
+    <div class="home contain">
+      <div class="divider"></div>
+      <div class="visual">
+        <h2>Student Design Portal</h2>
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <!-- resmTemp featured below -->
+            <div class="carousel-item active">
+              <img
+                src="/img/resumeTemplate.png"
+                class="d-block w-100"
+                alt="First slide"
+              />
+            </div>
+            <!-- resmTemp featured above -->
+            <!-- digtArt below -->
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="/img/digitalArt.png"
+                alt="Second slide"
+              />
+            </div>
+            <!-- digitArt above -->
+            <!-- webtheme below -->
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="/img/websiteTheme.png"
+                alt="Third slide"
+              />
+            </div>
+            <!-- webtheme above -->
+            <!-- logo below -->
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="/img/logo.png"
+                alt="Fourth slide"
+              />
+            </div>
+            <!-- logo above -->
+            <!-- business cards below-->
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="/img/businessCards.png"
+                alt="Fifth slide"
+              />
+            </div>
+            <!-- business cards above-->
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#carouselExampleControls"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#carouselExampleControls"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <!-- slider end above -->
+        <div class="about">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+            provident eos nemo necessitatibus, molestiae quasi quaerat
+            voluptatum! Sunt porro odio fugiat, atque totam reiciendis esse vel
+            mollitia eveniet consequatur at!
+          </p>
+        </div>
 
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-          
-            src="/img/resumeTemplate.png"
-            class="d-block w-100"
-            alt="First slide"
-          />
-
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/digitalArt.png"
-            alt="Second slide"
-          />
-        </div>
-
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/websiteTheme.png"
-            alt="Third slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/logo.png"
-            alt="Fourth slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="/img/businessCards.png"
-            alt="Fifth slide"
-          />
-        </div>
+        <!-- visual end below -->
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <!-- home end below -->
     </div>
-    <div class="about">
-      <p>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus provident eos nemo necessitatibus, molestiae quasi quaerat voluptatum! Sunt porro odio fugiat, atque totam reiciendis esse vel mollitia eveniet consequatur at!</p>
-   
-    </div>
-  </div>
-
   </body>
   <!-- bootstrap -->
-  <script src="https://code.jquery.com/jquery-4.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script
+    src="https://code.jquery.com/jquery-4.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"
+  ></script>
   <!-- js file -->
   <script src="js/min/main.min.js"></script>
 </html>
