--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </div>
     </nav>
     <!-- PAGE 1 HOME -->
+    <div class="fit-nav"></div>
     <div class="page1">
       <a id="home" class="smooth"></a>
       <!-- <div class="logos"> -->
@@ -68,7 +69,9 @@
     <div class="home contain">
       <div class="divider"></div>
       <div class="visual">
-        <h2>Student Design Portal</h2>
+        <h2><span>Student Design Portal</span></h2>
+        <div class="layout">
+        <div class="part-left">
         <div
           id="carouselExampleControls"
           class="carousel slide"
@@ -77,6 +80,7 @@
           <div class="carousel-inner">
             <!-- resmTemp featured below -->
             <div class="carousel-item active">
+              <div class="caption"></div>
               <img
                 src="/img/resumeTemplate.png"
                 class="d-block w-100"
@@ -141,6 +145,9 @@
           </a>
         </div>
         <!-- slider end above -->
+        <!-- part left end below -->
+        </div>
+        <div class="part-right">
         <div class="about">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
@@ -149,7 +156,12 @@
             mollitia eveniet consequatur at!
           </p>
         </div>
-
+        <!-- part right end below -->
+      </div>
+      <!-- part right end above -->
+        <!-- layout end below -->
+      </div>
+      <!-- layout end above -->
         <!-- visual end below -->
       </div>
       <!-- home end below -->
