--- a/contact.html
+++ b/contact.html
@@ -101,15 +101,15 @@
         <div class="con-cont">
           <h2>Contact</h2>
           <div class="map-area">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11216.141359428813!2d-75.75456045157549!3d45.34809888118844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sgoogle+map+algonquin+college!5e0!3m2!1szh-CN!2sca!4v1555089920363!5m2!1szh-CN!2sca"
-              width="600"
-              height="450"
-              frameborder="0"
-              style="border:0"
-              allowfullscreen
-            ></iframe>
+            <div class="map-layout">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11216.141359428813!2d-75.75456045157549!3d45.34809888118844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sgoogle+map+algonquin+college!5e0!3m2!1szh-CN!2sca!4v1555089920363!5m2!1szh-CN!2sca"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
+          <div class="info">Visit our Office Now.</div>
         </div>
         <!-- visual end below -->
       </div>
