--- a/products.html
+++ b/products.html
@@ -2,12 +2,8 @@
     <!-- products --> 
         
           <h2>Products</h2>
-        <div class="pro-mob"></div>
-        <div class="pro-desk"></div>
-
-       <!-- Accordian Start  -->
+     <!-- Accordian Start  -->
         <!-- FIRST CARD - BIKE LOGO -->
-
         <div class="accordion" id="accordionExample" >
           <div class="card" >
             <div class="card-header" id="headingOne">
@@ -28,7 +24,7 @@
                 <h5 class="card-title">Bicycle Logo</h5>
 
                 <p class="card-text">
-                  Bianca Leadaekam is a digital artist that specializes in
+Bianca Leadaekam is a digital artist that specializes in
 logo design. One of her latest is called “Bicycle Shop.” It
 is a distinctive design modelled after the shape and colours
 of the logos that were stamped on wooden baseball
@@ -99,7 +95,6 @@ $89.00, which includes our standard license.</p>
               <a href="#" class="btn btn-primary">BUY</a>
             </div>
           </div>
-
     </div>
   </div>
 </div>
@@ -135,7 +130,6 @@ $89.00, which includes our standard license.</p>
               <a href="#" class="btn btn-primary">BUY</a>
             </div>
           </div>
-
     </div>
   </div>
 </div>
@@ -165,15 +159,12 @@ $89.00, which includes our standard license.</p>
               <a href="#" class="btn btn-primary">BUY</a>
             </div>
           </div>
-
-
     </div>
   </div>
 </div>
 </div>
-
+</div>
 <!-- Accordian End -->
-
 
 <!-- This is the end of the mobile view -->
 
