--- a/contact.html
+++ b/contact.html
@@ -133,28 +133,28 @@
         </div>
         <div class="con-cont">
           <h2>Contact</h2>
-          <h3>Contact Us By Different Ways Below</h3>
-          <div class="con-msg">
-            <span>
-              Office Number: (613)-123-1234
-          </span>
-        </div>
-          <div class="con-msg">
-            <span>
-              Office Email:apricotmedia@algonquincollege.com
-          </span>
-        </div>
-          <div class="social-media">
-            <div class="icon"></div>
-            <div class="icon"></div>
-            <div class="icon"></div>
+          <div class="info-space">
+            <div class="intro"><span>Contact Us Via Different Ways</span></div>
+            <div class="content ways">
+              <div class="way">
+                <span>Office Email:apricotmedia@algonquincollege.com</span>
+              </div>
+              <div class="way"><span>Office Phone:(613)-123-1234</span></div>
+            </div>
+            <div class="intro"><span>Or Follow Us on Social Media</span></div>
+            <div class="content">
+              <div class="social">
+                <div class="icon"></div>
+                <div class="icon"></div>
+                <div class="icon"></div>
+              </div>
+            </div>
           </div>
+        </div>
         <!-- visual end below -->
       </div>
       <!-- contact end below -->
     </div>
-    <!-- footer -->
-    <div class="footer"></div>
   </body>
   <!-- bootstrap -->
   <script
