--- a/index.html
+++ b/index.html
@@ -109,17 +109,20 @@
       <div class="divider"></div>
       <div class="visual">
         <div class="change">
-          <div class="btn">
-            <div class="icon"></div>
+          <div class="btnArea">
+            <div class="btn" id="conForm">
+              <div class="icon formIC"></div>
+            </div>
+            <div class="btn" id="conMap">
+              <div class="icon mapIC"></div>
+            </div>
+            <div class="btn" id="conMesg">
+              <div class="icon mesgIC"></div>
+            </div>
           </div>
-          <div class="btn">
-            <div class="icon"></div>
-          </div>
-          <div class="btn">
-            <div class="icon"></div>
-          </div>
+          <div class="bgpic" id="bgpic"></div>
         </div>
-        <div class="con-cont">
+        <div class="con-cont" id="conCont">
           <h2>Contact</h2>
         </div>
         <!-- visual end below -->
