--- a/index.html
+++ b/index.html
@@ -107,43 +107,102 @@
     <!-- home end below -->
     </div>
     <!-- services -->
-    <div class="service contain">
-        <div class="divider"></div>
-        <div class="visual">
-      <h2>Services</h2>
-      <div class="contai">
-        <div class="row no-gutters">
-          <div class="col-md one">
-          <h1>LOGOS</h1>
-          </div>
-          <div class="col-md two">
-            <h1>WEB</h1>
-          </div>
-          <div class="col-md three">
-            <h1>CARD</h1>
-          </div>
-          <div class="col-md four">
-            <h1>BRAND</h1>
-          </div>
-          <div class="col-md-6">
-                <div class="image1">
+    <div class="services">
 
-          <img class="col" src="images\F7FDA338.jpg" alt=""><br />
-          <h1>APP DEVELOPMENT</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <b class="bold">Price : 1200$</b><span><b class="bold">Estimated completion time : 14 Days</b></span>
-      <br>  <button type="button" onclick="alert('Added to cart')">BUY</button>
 
+    <div class="accordion" id="accordionExample">
+     <div class="logo card">
+       <div class="logo card-header" id="headingOne">
+         <h2 class="mb-0">
+           <button class="logo btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+             aria-expanded="false" aria-controls="collapseOne">
+             LOGO
+           </button>
+         </h2>
+       </div>
+
+       <div id="collapseOne" class="collapse collapsing" aria-labelledby="headingOne" data-parent="#accordionExample">
+         <div class="card-body"><div class="image1">
+
+
+           <img class="w-25" src="images\F7FDA338.jpg" alt="">
+           <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+           haven't heard of them accusamus labore sustainable VHS.</p>
+
+          </div>
+        </div>
+       </div>
+     </div>
+     <div class="web card">
+       <div class="card-header" id="headingTwo">
+         <h2 class="mb-0">
+           <button class="web btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+             aria-expanded="false" aria-controls="collapseTwo">
+             WEB
+           </button>
+         </h2>
+       </div>
+       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+         <div class="card-body">
+           Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+           haven't heard of them accusamus labore sustainable VHS.
+         </div>
+       </div>
+     </div>
+     <div class="bcard card">
+       <div class="card-header" id="headingThree">
+         <h2 class="mb-0">
+           <button class="bcard btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+             aria-expanded="false" aria-controls="collapseThree">
+             CARD
+           </button>
+         </h2>
+       </div>
+       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+         <div class="card-body">
+           Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+           haven't heard of them accusamus labore sustainable VHS.
+         </div>
+       </div>
+     </div>
+     <div class="brand card">
+       <div class="card-header" id="headingThree">
+         <h2 class="mb-0">
+           <button class="brand btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefour"
+             aria-expanded="true" aria-controls="collapsefour">
+             Brand
+           </button>
+         </h2>
+       </div>
+       <div id="collapsefour" class="collapse show" aria-labelledby="headingThree" data-parent="#accordionExample">
+         <div class="card-body">
+           Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+           haven't heard of them accusamus labore sustainable VHS.
+         </div>
+       </div>
+     </div>
+   </div>
   </div>
-          </div>
-        </div>
-      </div>
-
-
       <!-- visual end below -->
-        </div>
+
       <!-- service end below -->
-    </div>
+
 
     <!-- products -->
     <div class="product contain">
@@ -263,7 +322,7 @@
     </div>
       <!-- footer -->
       <footer class="w-100">
-        <div class="car w-25 h-50 card" >
+        <div class="car  h-50 card" >
   <img src="images\nnn.png" class="card-img-top" alt="...">
   <div class="card-body">
   <h4 class="car-text">  copyrighted by Paul, Carla, Nelvin, Tim</h4></div>
