--- a/index.html
+++ b/index.html
@@ -105,13 +105,29 @@
       <!-- product end below -->
     </div>
     <!-- contact -->
-    <div class="contact contain">
+    <div class="contain contact">
       <div class="divider"></div>
       <div class="visual">
-        <h2>contact</h2>
+        <div class="change">
+          <div class="btnArea">
+            <div class="btn" id="conForm">
+              <div class="icon formIC"></div>
+            </div>
+            <div class="btn" id="conMap">
+              <div class="icon mapIC"></div>
+            </div>
+            <div class="btn" id="conMesg">
+              <div class="icon mesgIC"></div>
+            </div>
+          </div>
+          <div class="bgpic" id="bgpic"></div>
+        </div>
+        <div class="con-cont" id="conCont">
+          <h2>Contact</h2>
+        </div>
         <!-- visual end below -->
       </div>
-      <!-- product end below -->
+      <!-- contact end below -->
     </div>
   </body>
   <!-- bootstrap -->
